# esp-box-thorvg_demo

examples/thorvg_demo/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/thorvg_demo/main/: CMakeLists.txt  assets_generate.h  display_main.c  idf_component.yml
tools/: build_apps.py
